# PortraitGenerator

./: .env.example  .gitignore  API_KEY_ISSUE_RESOLVED.md  AUTONOMOUS_COMPLETION_REPORT.md  BACKGROUND_TASKS_SUMMARY.md  BookPortraits.md  CHANGELOG.md  COMPLETION_REPORT.md  COMPREHENSIVE_REVIEW.md  COMPREHENSIVE_TEST_PROGRESS.md  CRITICAL_QUOTA_FINDING.md  DEPLOYMENT_COMPLETE.md  FINAL_SESSION_UPDATE.md  FINAL_STATUS_REPORT.md  GENERATE_TEST_IMAGES.md  GENERATE_TEST_IMAGES_NOW.md  GOOGLE_API_QUOTA_ISSUE.md  IMPLEMENTATION_SUMMARY.md  ImplementationPlan.md  LICENSE  MANIFEST.in  PERFORMANCE_ANALYSIS.md  PUBLISHING_INSTRUCTIONS.md  README.md  README_SESSION_COMPLETE.md  RELEASE_v2.0.0.md  SESSION_SUMMARY.md  TEST_IMAGES_README.md  URGENT_API_KEY_REQUIRED.md  comprehensive_test_log.txt  details_portrait_verification.md  generate_all_paintings.py  generate_comprehensive_tests.py  generate_test_portraits.py  portrait_verification.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_final_comprehensive_test.py  (+2 more)
.claude.backup/: settings.local.json
conda.recipe/: meta.yaml
docs/: GEMINI_3_PRO_IMAGE.md  PROFILING_2026-02-03.md
src/portrait_generator/: __init__.py  __version__.py  cli.py  client.py  compatibility.py  intelligence_coordinator.py  pre_generation_validator.py  prompt_builder.py  reference_finder.py
src/portrait_generator/api/: __init__.py  models.py  routes.py  server.py
src/portrait_generator/config/: __init__.py  model_configs.py  settings.py
src/portrait_generator/core/: __init__.py  evaluator.py  evaluator_enhanced.py  generator.py  generator_enhanced.py  overlay.py  portrait_verifier.py  researcher.py
src/portrait_generator/data/: verified_biographies.yaml
src/portrait_generator/utils/: __init__.py  gemini_client.py  ground_truth.py  http_cache.py  image_utils.py  validators.py
test_output/: AlanTuring_BW_prompt.md  AlanTuring_Color_prompt.md  AlanTuring_Painting_prompt.md  AlanTuring_Sepia_prompt.md  ClaudeShannon_BW_prompt.md  ClaudeShannon_Color_prompt.md  ClaudeShannon_Painting_prompt.md  ClaudeShannon_Sepia_prompt.md  gallery.html
test_output_comprehensive/: AlexeyChervonenkis_BW_prompt.md  AlexeyChervonenkis_Color_prompt.md  AlexeyChervonenkis_Painting_prompt.md  AlexeyChervonenkis_Sepia_prompt.md  AllenNewell_BW_prompt.md  AllenNewell_Color_prompt.md  AllenNewell_Painting_prompt.md  AllenNewell_Sepia_prompt.md  ArthurLeeSamuel_BW_prompt.md  ArthurLeeSamuel_Color_prompt.md  ArthurLeeSamuel_Painting_prompt.md  ArthurLeeSamuel_Sepia_prompt.md  AugustusDeMorgan_BW_prompt.md
test_output_parallel/: AdaLovelace_BW_prompt.md  AdaLovelace_Color_prompt.md  AdaLovelace_Painting_prompt.md  AdaLovelace_Sepia_prompt.md
tests/: __init__.py
tests/fixtures/: sample_subjects.json
tests/integration/: test_book_portraits.py  test_e2e_real_api.py
tests/unit/: test_api_models.py  test_api_server.py  test_client.py  test_evaluator.py  test_gemini_client.py  test_generator.py  test_ground_truth.py  test_image_utils.py  test_model_configs.py  test_overlay.py  test_portrait_verifier.py  test_pre_generation_validator.py  test_prompt_builder.py  test_reference_finder.py  test_researcher.py  test_validators.py
tests/visual/: __init__.py
