[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portrait-generator"
version = "1.0.0"
description = "AI-powered historical portrait generation using Google Gemini"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Dr. David Lary", email = "david.lary@utdallas.edu"}
]
maintainers = [
    {name = "Dr. David Lary", email = "david.lary@utdallas.edu"}
]
keywords = [
    "ai",
    "artificial-intelligence",
    "portrait",
    "image-generation",
    "gemini",
    "google-ai",
    "historical-portraits",
    "computer-vision",
    "image-processing"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Multimedia :: Graphics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
]
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.0.0,<2.0.0",
    "pillow>=11.0.0,<12.0.0",
    "fastapi>=0.100.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "pydantic>=2.6.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "click>=8.0.0,<9.0.0",
    "httpx>=0.26.0,<1.0.0",
    "requests>=2.31.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "loguru>=0.7.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
test = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.0",
    "pytest-timeout>=2.4.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-click>=6.0.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/davidlary/PortraitGenerator"
Documentation = "https://portrait-generator.readthedocs.io"
Repository = "https://github.com/davidlary/PortraitGenerator"
"Bug Reports" = "https://github.com/davidlary/PortraitGenerator/issues"
Changelog = "https://github.com/davidlary/PortraitGenerator/blob/main/CHANGELOG.md"

[project.scripts]
portrait-generator = "portrait_generator.cli:main"
portrait-gen = "portrait_generator.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["portrait_generator*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=portrait_generator",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=90",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests with real API calls",
    "slow: Slow running tests",
    "api: API endpoint tests",
]
timeout = 300
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/portrait_generator"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/cli.py",  # CLI tested via e2e tests
    "*/api/routes.py",  # API routes tested via e2e tests
    "*/api/server.py",  # API server tested via e2e tests
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "google.genai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "PIL.*"
ignore_missing_imports = true
